--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 
-MONGODB_URI=mongodb://localhost:27017/helpdesk-app
+MONGODB_URI=mongodb+srv://Helpdesk:Helpdesk001@cluster0.eo1mu.mongodb.net/
 JWT_SECRET=MY_very_long_and_secure_secret_key
 PORT=5000
 
