--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,4 @@
-
 MONGODB_URI=mongodb+srv://Helpdesk:Helpdesk001@cluster0.eo1mu.mongodb.net/
 JWT_SECRET=MY_very_long_and_secure_secret_key
 PORT=5000
-
-# NODE_ENV=developme
+NODE_ENV=development
