--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,12 +14,15 @@
     "@tailwindcss/vite": "^4.0.0",
     "axios": "^1.7.9",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.474.0",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.3",
-    "react-toastify": "^11.0.3"
+    "react-toastify": "^11.0.3",
+    "recharts": "^2.15.0"
   },
   "devDependencies": {
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
