--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,3 @@
-VITE_API_URL=http://localhost:5000/api
+VITE_API_URL=  http://localhost:5000
+# https://helpdesk-application-0eex.onrender.com
+# http://localhost:5000/api
