--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,4 @@ MONGODB_URI=mongodb+srv://Helpdesk:Helpdesk001@cluster0.eo1mu.mongodb.net/
 JWT_SECRET=MY_very_long_and_secure_secret_key
 PORT=5000
 NODE_ENV=development
+VERCEL_URL = https://your-frontend.vercel.app
