--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,4 @@
-VITE_API_URL=  http://localhost:5000
+# VITE_API_URL=  http://localhost:5000
 
-# VITE_API_URL = https://helpdesk-application-0eex.onrender.com
+VITE_API_URL = https://helpdesk-application-02.onrender.com
 # http://localhost:5000/api
